--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
       - net_backend
     links:
       - database
-      - mercure
+#      - mercure
     depends_on:
       - database
-      - mercure
+#      - mercure
 
   database:
     image: postgres:${POSTGRES_VERSION:-14}-alpine
@@ -30,29 +30,29 @@ services:
     networks:
       - net_backend
 
-  mercure:
-    image: dunglas/mercure
-    restart: unless-stopped
-    environment:
-      MERCURE_PUBLISHER_JWT_KEY: '!ChangeThisMercureHubJWTSecretKey!'
-      MERCURE_SUBSCRIBER_JWT_KEY: '!ChangeThisMercureHubJWTSecretKey!'
-      MERCURE_EXTRA_DIRECTIVES: |-
-        cors_origins *
-    # Uncomment the following line to enable the development mode
-    command: /usr/bin/caddy run --config /etc/caddy/Caddyfile.dev
-    ports:
-      - "80:80"
-      - "443:443"
-    networks:
-      - net_backend
-    volumes:
-      - caddy_data:/data
-      - caddy_config:/config
+#  mercure:
+#    image: dunglas/mercure
+#    restart: unless-stopped
+#    environment:
+#      MERCURE_PUBLISHER_JWT_KEY: '!ChangeThisMercureHubJWTSecretKey!'
+#      MERCURE_SUBSCRIBER_JWT_KEY: '!ChangeThisMercureHubJWTSecretKey!'
+#      MERCURE_EXTRA_DIRECTIVES: |-
+#        cors_origins *
+#     Uncomment the following line to enable the development mode
+#    command: /usr/bin/caddy run --config /etc/caddy/Caddyfile.dev
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    networks:
+#      - net_backend
+#    volumes:
+#      - caddy_data:/data
+#      - caddy_config:/config
 
 networks:
   net_backend:
     driver: bridge
 volumes:
   db-data:
-  caddy_data:
-  caddy_config:
+#  caddy_data:
+#  caddy_config:
